Now selected buttons change it's color.

--- a/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CoopGame/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -27,8 +27,6 @@ MultipleInstancePositions=(X=0,Y=0)
 MultipleInstancePositions=(X=672,Y=0)
 MultipleInstancePositions=(X=0,Y=512)
 NewWindowPosition=(X=655,Y=323)
-PlayNumberOfClients=2
-LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -51,7 +49,7 @@ GridEnabled=False
 LastLevel=/Game/Level/MainMenu
 
 [ModuleFileTracking]
-CoopGame.TimeStamp=2020.05.18-18.54.06
+CoopGame.TimeStamp=2020.05.18-19.02.16
 CoopGame.LastCompileMethod=External
 PakFile.TimeStamp=2019.12.20-23.26.51
 PakFile.LastCompileMethod=Unknown
@@ -5241,10 +5239,24 @@ REINST_BP_PlayerPawn_C_68.ComponentReplication=True
 REINST_BP_PlayerPawn_C_68.Activation=True
 REINST_BP_PlayerPawn_C_68.Cooking=True
 REINST_BP_PlayerPawn_C_68.Events=True
+WBP_PlayModesMenu_C.Appearance=True
+WBP_PlayModesMenu_C.Designer=True
+WBP_PlayModesMenu_C.Input=True
+WBP_PlayModesMenu_C.Interaction=True
+WBP_PlayModesMenu_C.Performance=True
+WBP_PlayModesMenu_C.Layout=True
+WBP_PlayModesMenu_C.Behavior=True
+WBP_PlayModesMenu_C.Render Transform=True
+WBP_PlayModesMenu_C.Clipping=True
+WBP_PlayModesMenu_C.Navigation=True
+WBP_PlayModesMenu_C.Localization=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/UI/WBP_CreateSessionMenu.WBP_CreateSessionMenu
+OpenAssetsAtExit=/Game/UI/WBP_JoinASessionMenu.WBP_JoinASessionMenu
+OpenAssetsAtExit=/Game/UI/SelectionBoxes/WBP_ContentSelectionButton.WBP_ContentSelectionButton
 
 [RootWindow]
 ScreenPosition=X=470.000 Y=198.000
@@ -5459,7 +5471,7 @@ WBP_PlayModesMenu_C=BP_PlayerPawn_C.Physics.ConstraintsGroup,BP_PlayerPawn_C.Ren
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 BP_PlayerPawn_C="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 SCharacter="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Character="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -5636,7 +5648,7 @@ REINST_BP_PlayerPawn_C_103="\"Object.Components.camera.Object.PostProcess.PostPr
 REINST_BP_PlayerPawn_C_109="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetBarStyle\" \"Object.Render Transform.RenderTransform\" "
 WBP_MainMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WBP_LevelSelectMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WBP_LevelSelectionButton_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
@@ -5646,14 +5658,15 @@ WBP_LevelSelectionBox_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render T
 SLevelSelectionBoxWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WrapBox="\"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.LeftShadowBrush\" \"Object.Style.WidgetBarStyle\" \"Object.Render Transform.RenderTransform\" "
-WBP_ContentSelectionButton_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-WBP_ContentSelectionBox_C=
-SContentSelectionBoxWidget=
-WBP_SessionSelectionBox_C=
+WBP_ContentSelectionButton_C=
+WBP_ContentSelectionBox_C="\"Object.Render Transform.RenderTransform\" "
+SContentSelectionBoxWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+WBP_SessionSelectionBox_C="\"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 WBP_CreateSessionMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 WBP_JoinASessionMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 REINST_BP_PlayerPawn_C_68="\"Object.Components.camera.Object.PostProcess.PostProcessSettings\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorSaturationShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorContrastShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGammaShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorGainShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.ColorOffsetShadows\" \"Object.Components.camera.Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+WBP_PlayModesMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -5678,26 +5691,26 @@ RecentlyPlaced=/Script/Engine.SphereReflectionCapture;/Engine/Transient.ActorFac
 RecentlyPlaced=/Game/Blueprints/Miscellaneous/BP_ExplosiveBarrel.BP_ExplosiveBarrel;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Level/maps/FloatingIsland
-MRUItem1=/Game/Level/MainMenu
-MRUItem2=/Game/Level/maps/Blockout
-MRUItem3=/Game/Level/maps/Wimbledon
-MRUItem4=/Game/Objects/TrackerBot/BP_TrackerBot
-MRUItem5=/Game/Objects/Characters/BP_AIPlayer
-MRUItem6=/Game/Objects/Characters/BP_PlayerPawn
-MRUItem7=/Game/GameModes/BP_TestGameMode
-MRUItem8=/Game/UI/WBP_CreateSessionMenu
-MRUItem9=/Game/UI/WBP_JoinASessionMenu
-MRUItem10=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
-MRUItem11=/Game/UI/WBP_PlayModesMenu
-MRUItem12=/Game/UI/WBP_LevelSelectMenu
-MRUItem13=/Game/UI/WBP_MainMenu
-MRUItem14=/Game/UI/WBP_LevelSelectionBox
-MRUItem15=/Game/UI/NewBlueprint
-MRUItem16=/Game/UI/WBP_ContentSelectionButton
-MRUItem17=/Game/UI/WBP_ContentSelectionBox
-MRUItem18=/Game/UI/WBP_LevelSelectionButton
-MRUItem19=/Game/Level/maps/MainMenu
+MRUItem0=/Game/UI/SelectionBoxes/WBP_LevelSelectionBox
+MRUItem1=/Game/UI/WBP_LevelSelectMenu
+MRUItem2=/Game/UI/SelectionBoxes/WBP_SessionSelectionBox
+MRUItem3=/Game/UI/WBP_MainMenu
+MRUItem4=/Game/UI/WBP_PlayModesMenu
+MRUItem5=/Game/UI/SelectionBoxes/WBP_ContentSelectionButton
+MRUItem6=/Game/UI/WBP_JoinASessionMenu
+MRUItem7=/Game/UI/WBP_CreateSessionMenu
+MRUItem8=/Game/Level/maps/FloatingIsland
+MRUItem9=/Game/Level/MainMenu
+MRUItem10=/Game/Level/maps/Blockout
+MRUItem11=/Game/Level/maps/Wimbledon
+MRUItem12=/Game/Objects/TrackerBot/BP_TrackerBot
+MRUItem13=/Game/Objects/Characters/BP_AIPlayer
+MRUItem14=/Game/Objects/Characters/BP_PlayerPawn
+MRUItem15=/Game/GameModes/BP_TestGameMode
+MRUItem16=/Game/UI/WBP_LevelSelectionBox
+MRUItem17=/Game/UI/NewBlueprint
+MRUItem18=/Game/UI/WBP_ContentSelectionButton
+MRUItem19=/Game/UI/WBP_ContentSelectionBox
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=0
@@ -5823,6 +5836,10 @@ MRUItem19=/Game/Level/maps/MainMenu
 /Game/GameModes/BP_TestGameMode.BP_TestGameMode=0
 /Game/UI/WBP_LevelSelectionBox.WBP_LevelSelectionBox=0
 /Game/UI/SelectionBoxes/WBP_ContentSelectionButton.WBP_ContentSelectionButton=0
+/Game/UI/WBP_MainMenu.WBP_MainMenu=0
+/Game/UI/SelectionBoxes/WBP_LevelSelectionBox.WBP_LevelSelectionBox=0
+/Game/UI/SelectionBoxes/WBP_SessionSelectionBox.WBP_SessionSelectionBox=0
+/Game/UI/WBP_PlayModesMenu.WBP_PlayModesMenu=0
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -6024,6 +6041,7 @@ EnvQueryTest_Trace.Trace=True
 EnvQueryGenerator_Donut.Option=True
 BP_PlayerPawn_C.Sound=True
 AudioComponent.Sound=True
+Button.Interaction=True
 
 [MaterialInstanceEditor]
 bShowGrid=False
